# SentinalMesh

./: .gitignore  README.md  post_mortem.md
docs/: ARCHITECTURE.md  DATASET.md  PAPER_MAPPING.md  progress.md
ml-crosscheck/: pyproject.toml
ml-crosscheck/src/: dataset.py
results/: RESULTS_SUMMARY.md
results/full_grid/: flags.md  master_grid.csv
results/full_grid/seed_42/: sweep_results.csv
results/full_grid/seed_43/: sweep_results.csv
results/full_grid/seed_44/: sweep_results.csv
scripts/: calibrate_ewma_threshold.py
simulator/: go.mod
simulator/cmd/simulate/: main.go
simulator/configs/: single.yaml  sweep_default.yaml
simulator/internal/baseline/: baseline.go  baseline_test.go
simulator/internal/dataset/: dataset.go
simulator/internal/fragment/: fragment.go
simulator/internal/gossip/: gossip.go  gossip_test.go
simulator/internal/metrics/: metrics.go  metrics_test.go
simulator/internal/node/: node.go
simulator/internal/quorum/: quorum.go  quorum_test.go
simulator/internal/scorer/: scorer.go
simulator/internal/sweep/: sweep.go  sweep_test.go
simulator/scripts/: analyze_feedback.py  extract_tables.py  run_full_grid.py  synthetic_harness.py
simulator/tests/: integration_test.go
tests/dashboard/: README.md
tests/ml-crosscheck/: README.md
